create hero and refactor

--- a/src/components/navbar/styles/navbar.css
+++ b/src/components/navbar/styles/navbar.css
@@ -1,33 +1,59 @@
+:root {
+  /* Colors */
+  --navbar-background-color: #FFF000;
+  --menu-item-color: #333333;
+  --contact-button-background-color: hsl(326, 100%, 45%);
+  --contact-button-text-color: #FFFFFF;
+  --line-color: #333333;
+
+  /* Sizes */
+  --navbar-height: 64px;
+  --navbar-padding-vertical: 7px;
+  --navbar-padding-horizontal: 15px;
+  --icon-size: 14px;
+  --line-width: 30px;
+  --line-height: 4px;
+  --hamburger-button-size: 40px;
+  --contact-button-width: 182px;
+  --contact-button-height: 50px;
+
+  /* Spacing */
+  --navbar-gap: 5rem;
+  --menu-item-gap: 40px;
+  --hamburger-line-margin: 4px;
+  --hamburger-line-transition: transform 0.3s, opacity 0.3s;
+}
+
 .navbar-container {
-  background-color: #FFF000;
+  background-color: var(--navbar-background-color);
   display: flex;
-  gap: 5rem;
+  gap: var(--navbar-gap);
   width: 100%;
   top: 0;
   position: fixed;
-  height: 64px;
+  height: var(--navbar-height);
   align-items: center;
-  padding: 7px 15px;
+  padding: var(--navbar-padding-vertical) var(--navbar-padding-horizontal);
 }
 
 .navbar-menu {
   display: flex;
-  gap: 40px;
+  gap: var(--menu-item-gap);
 }
 
 .icon {
-  height: 14px;
-  width: 14px;
+  height: var(--icon-size);
+  width: var(--icon-size);
   margin-left: 10px;
 }
 
 .menu-item, .contact-button {
-  font-size: 20px;
+  font-size: 20px; 
 }
 
 .menu-item {
   text-decoration: none;
-  color: #333333;
+  color: var(--menu-item-color);
 }
 
 .contact-div {
@@ -35,11 +61,11 @@
 }
 
 .contact-button {
-  width: 182px;
-  height: 50px;
-  background-color: #E3007F;
+  width: var(--contact-button-width);
+  height: var(--contact-button-height);
+  background-color: var(--contact-button-background-color);
   border-radius: 5px;
-  color: #FFFFFF;
+  color: var(--contact-button-text-color);
   border: none;
   cursor: pointer;
 }
@@ -59,17 +85,17 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
-  margin-left:auto;
+  width: var(--hamburger-button-size);
+  height: var(--hamburger-button-size);
+  margin-left: auto;
 }
 
 .line {
-  width: 30px;
-  height: 4px;
-  background-color: #333333;
-  margin: 4px 0;
-  transition: transform 0.3s, opacity 0.3s;
+  width: var(--line-width);
+  height: var(--line-height);
+  background-color: var(--line-color);
+  margin: var(--hamburger-line-margin) 0;
+  transition: var(--hamburger-line-transition);
 }
 
 .line.open:nth-child(1) {
@@ -81,7 +107,7 @@
 }
 
 .line.open:nth-child(3) {
-  transform: translate(0,-12px) rotate(-45deg);
+  transform: translate(0, -12px) rotate(-45deg);
 }
 
 @media(max-width: 980px) {
