--- a/src/components/carousel/carousel.css
+++ b/src/components/carousel/carousel.css
@@ -1,47 +1,77 @@
+:root {
+  --carousel-width: 100%;
+  --arrow-size: 50px;
+  --arrow-position: -2%;
+  --arrow-transition: 0.5s ease;
+  --arrow-left: var(--arrow-position);
+  --arrow-right: var(--arrow-position);
+  
+  --arrow-position-sm: -2.7%;
+  --arrow-position-md: -4.2%;
+  --arrow-position-xs: -9%;
+}
+
 .carousel-container {
-  position: relative; /* For positioning arrows */
-  margin: 0 auto; /* Center the carousel */
-  overflow: hidden;
+  position: relative; 
+  margin: 0 auto;
+  max-width: var(--carousel-width); 
+  width: var(--carousel-width);
 }
 
 .carousel-images-container {
   display: flex;
-  gap: 1rem; /* Space between images */
-  transition: transform 0.5s ease; /* Smooth sliding transition */
+  gap: 1rem; 
+  transition: transform var(--arrow-transition); 
 }
 
 .carousel-image-wrapper {
-  flex: 0 0 auto; /* Prevent shrinking */
-  width: 302px; /* Fixed width of images */
-  box-sizing: border-box; /* Include padding and border in width */
+  flex: 0 0 auto; 
+  box-sizing: border-box; 
 }
 
 .carousel-image-wrapper img {
-  width: 100%; /* Ensure images fill their container */
-  height: auto; /* Maintain aspect ratio */
-  display: block; /* Remove any extra space below images */
+  width: 100%; 
+  height: 100%;
+  display: block;
 }
 
 .arrow {
   position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
-  border: none;
-  font-size: 24px;
+  height: var(--arrow-size);
+  width: var(--arrow-size);
   cursor: pointer;
   z-index: 10;
 }
 
 .left-arrow {
   top: 50%;
-  left: 10px;
+  left: var(--arrow-left);
   transform: translateY(-50%);
 }
 
 .right-arrow {
   top: 50%;
-  right: 10px;
+  right: var(--arrow-right);
   transform: translateY(-50%);
+}
+
+@media (max-width: 1289px) {
+  :root {
+    --arrow-left: var(--arrow-position-sm);
+    --arrow-right: var(--arrow-position-sm);
+  }
+} 
+
+@media (max-width: 969px) {
+  :root {
+    --arrow-left: var(--arrow-position-md);
+    --arrow-right: var(--arrow-position-md);
+  }
+} 
+
+@media (max-width: 641px) {
+  :root {
+    --arrow-left: var(--arrow-position-xs);
+    --arrow-right: var(--arrow-position-xs);
+  }
 }
