--- a/src/components/accordion/accordion.css
+++ b/src/components/accordion/accordion.css
@@ -1,19 +1,73 @@
-@import url("/src/index.css");
-
-.section-contents {
+.accordion-container {
   display: flex;
-  gap: 15px;
   flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  width: 100%;
-  height: 290px;
+  gap: var(--accordion-gap, 10px);
 }
 
-.center-text {
+.accordion-main {
+  padding: var(--accordion-padding, 20px);
+  border: var(--accordion-border, 1px solid #AAAAAA);
+  overflow: hidden;
+  transition: all var(--accordion-transition-duration, 0.15s) ease;
+}
+
+.accordion-header {
   display: flex;
-  align-items: start; /* Center vertically */
-  justify-content: start; /* Center horizontally */
-  height: 200px; /* Set a height for vertical centering */
-  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  cursor: pointer;
+}
+
+.accordion-icon {
+  margin-left: auto;
+  height: var(--accordion-icon-height);
+  width: var(--accordion-icon-width);
+  transition: transform var(--accordion-transition-duration) ease;
+}
+
+.accordion-icon.open {
+  transform: rotate(180deg);
+}
+
+.accordion-header *, .accordion-content p {
+  font-size: var(--accordion-font-size);
+  color: var(--accordion-text-color);
+}
+
+.accordion-content p {
+  margin-top: var(--accordion-content-margin-top);
+}
+
+.accordion-content {
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: opacity var(--accordion-transition-duration), margin-top var(--accordion-transition-duration);
+}
+
+.accordion-content.open {
+  opacity: 1;
+  margin-top: var(--accordion-content-margin-top-open, 21.5px);
+}
+
+@media(max-width: 768px) {
+  .accordion-main {
+    padding: var(--accordion-padding-mobile);
+  }
+
+  .accordion-header *, .accordion-content p {
+    color: var(--accordion-text-color-mobile);
+  }
+
+  .accordion-container { 
+    gap: var(--accordion-gap-mobile);
+  }
+
+  .accordion-content p, .accordion-content.open {
+    margin-top: var(--accordion-content-margin-top-mobile);
+  }
+
+  .accordion-header h3, .accordion-content p {
+    font-size: var(--accordion-font-size-mobile);
+  }
 }
